packages/tree-sitter-COMMIT_EDITMSG/grammar.js
    source: ($) =>
      seq(
        repeat($.comment),
        optional(seq(seq($.subject, NEWLINE), repeat($.comment))),
        optional(seq(NEWLINE, alias(repeat($._body_line), $.message))),
        optional($._generated_comments),
        optional($._scissor)
      ),

    subject: ($) => seq(seq(NOT_A_COMMENT, SUBJECT)),

    // prefix: ($) =>
    //   seq(
    //     alias($._conventional_type, $.type),
    //     optional(seq('(', alias(SCOPE, $.scope), ')')),
    //     optional('!'),
    //     ':'
    //   ),

    _body_line: ($) =>
      choice($._message, $.breaking_change, $.trailer, $.comment, NEWLINE),

    comment: ($) =>
      seq(
        '#',
        optional(WHITESPACE),
        optional(
          choice(alias(COMMENT_TITLE, $.title), token(prec(-1, COMMENT)))
        )
      ),
    _generated_comments: ($) =>
      seq(
        $._generated_comment_separator,
        repeat(choice($.generated_comment, NEWLINE))
      ),

    _scissor: ($) => seq(alias(SCISSORS, $.scissor), $.diff),
