packages/tree-sitter-COMMIT_EDITMSG/corpus/subject.txt
================================================================================
Empty file
================================================================================

--------------------------------------------------------------------------------

(source)

================================================================================
Simple subject
================================================================================
This is a simple subject

--------------------------------------------------------------------------------

(source
  (subject))

================================================================================
Subject with comment
================================================================================
# comment
this is a simple subject

--------------------------------------------------------------------------------

(source
  (comment)
  (subject))

================================================================================
Subject with comment
================================================================================
# comment
this is a simple subject
# comment

--------------------------------------------------------------------------------

(source
  (comment)
  (subject)
  (comment))

================================================================================
Empty file w/ comments
================================================================================
# comment

--------------------------------------------------------------------------------

(source
  (comment))

================================================================================
Empty file w/ empty comment
================================================================================
#

--------------------------------------------------------------------------------

(source
  (comment))

================================================================================
Subject overflow
================================================================================
this is a simple subject with an awesome overflow because it's longer than 50 characters

--------------------------------------------------------------------------------

(source
  (subject))

================================================================================
Not a comment
================================================================================
 # not a comment

--------------------------------------------------------------------------------

(source
  (subject))

================================================================================
Error if not a new line after subject
================================================================================
This is a subject
This should not exists

--------------------------------------------------------------------------------

(source
  (subject)
  (ERROR))

================================================================================
Subject with type and scope
================================================================================
feat(git): allow provided config object to extend other configs

--------------------------------------------------------------------------------

(source
  (subject))

================================================================================
Subject complete
================================================================================
feat(git)!: allow provided config object to extend other configs

--------------------------------------------------------------------------------

(source
  (subject))

================================================================================
Subject type and BC
================================================================================
feat!: allow provided config object to extend other configs

--------------------------------------------------------------------------------

(source
  (subject))

================================================================================
fix #36
================================================================================
feat(test):
--------------------------------------------------------------------------------

(source
  (subject)
  (MISSING "source_token1"))
